@@ -115,6 +115,7 @@ char   *datestr;
   int    i;
 
   struct tm *ptm;
+  struct tm  tmpPtm;
   char      *pc;
 
   struct tm  tm;
@@ -148,7 +149,7 @@ char   *datestr;
 
   clock = time((time_t *)0);
 
-  ptm   = localtime(&clock);
+	ptm   = localtime_r(&clock,&tmpPtm);
 
   tm.tm_year = ptm->tm_year; /* default year to current */
 
